@@ -24,8 +24,7 @@
       <a href='<?=$helpUrl?>/about.php'>About <?=$zen->settings["system_name"]?></a>
       <br><a href='<?=$helpUrl?>/gpl.php'>GPL License Agreement</a>
       <br><a href='http://sourceforge.net/projects/zentrack'>The zenTrack Project</a>
-      <br><a href='<?=$helpUrl?>/install.php'>Installation</a>
-	  <br><a href='<?=$helpUrl?>/support.php'>Support</a>
+      <br><a href='<?=$helpUrl?>/support.php'>Support</a>
     </ul>
   </ul>
   </blockquote>
